Removed .sinkC since it had been replaced by info.txtC argument in the ropls function used in opls_model_with_variable_selection_trycatch Ran rock function twice to not use graphics when calculating confidence interval. Increased significant digits when calculating perscent of significant models in summary file

--- a/Rscript/roplspvs_Models_of_each_comparison_strategy2.Rmd
+++ b/Rscript/roplspvs_Models_of_each_comparison_strategy2.Rmd
@@ -260,6 +260,12 @@ Confidence intervals through 2000 stratified bootstrap replicates
 pROC_Model2 <- roc(classordered, result_Model2$scoreofvariablesaftervs[, 1],
   smoothed = TRUE,
   ci = TRUE, stratified = T,
+  plot = FALSE, auc.polygon = TRUE, max.auc.polygon = TRUE, grid = TRUE,
+  print.auc = TRUE, show.thres = T
+)
+roc(classordered, result_Model2$scoreofvariablesaftervs[, 1],
+  smoothed = TRUE,
+  ci = TRUE, stratified = T,
   plot = TRUE, auc.polygon = TRUE, max.auc.polygon = TRUE, grid = TRUE,
   print.auc = TRUE, show.thres = T
 )
