--- a/Rscript/roplspvs_Models_of_each_comparison_strategy4.Rmd
+++ b/Rscript/roplspvs_Models_of_each_comparison_strategy4.Rmd
@@ -308,6 +308,12 @@ Confidence intervals through 2000 stratified bootstrap replicates
 pROC_Model4 <- roc(classordered, result_Model4$scoreofvariablesaftervs[, 1],
   smoothed = TRUE,
   ci = TRUE, stratified = T,
+  plot = FALSE, auc.polygon = TRUE, max.auc.polygon = TRUE, grid = TRUE,
+  print.auc = TRUE, show.thres = T
+)
+roc(classordered, result_Model4$scoreofvariablesaftervs[, 1],
+  smoothed = TRUE,
+  ci = TRUE, stratified = T,
   plot = TRUE, auc.polygon = TRUE, max.auc.polygon = TRUE, grid = TRUE,
   print.auc = TRUE, show.thres = T
 )
